#      does not trigger an alert of operstatus change (ex: newly added interface)
#    - add/enhancement: better Cisco ASA nodes support, with an ifdescr preformating
#    - bugfix: remove single quote from perfdata names and url to pnp
#    - bugfix: fixed major bug - config option -wp and -cp now honored (Birger Schmidt)
#
#   ----------------------------------------------------------------------
# * 0.03
#   ----------------------------------------------------------------------
#    - add: link to node selector
#    - bugfix: bad path in log message for missing css file (Birger Schmidt)
#    - add/enhancement: reinsert alias matching on in-/exclude regexmatching (Birger Schmidt)
#    - add/enhancement: changes to support netways grapher v1 (nagiosgrapher) again
#    - add: new alternate css, more adapted to multiple properties tracking. Also to give
#      an example of custom css.
#    - bugfix: blanks removed from property comparaison only from current value (from 
#      bugfix release 0.02-4)
#
#   ----------------------------------------------------------------------
# * 0.03b3
#   ----------------------------------------------------------------------
#    - bugfix: added missing ifoperstatus possible values (reported by Michael Gumbinger)
#    - enhancement: extended the non-tracking of ifoperstatusr: now from "xxx" to "up"
#    - change: pkt err thresholds now high by default
#    - change: one digit precision for pkt err rates
#    - add/enhancement: full use of perl's netsnmp and avoid use of Unix snmp 
#      utils. Need more testing in real environment, so still EXPERIMENTAL.
#    - add: plugin version on html page
#    - change: now 3 levels of inclusion/exclusion and a new traffic 
#      tracking logic: 
#       * global
#          + globally include/exclude interfaces to be monitored
#          + excluded interfaces are represented by black overlayed rows in the  
#            interface table 
#       * traffic tracking