@@ -10,6 +10,9 @@
 #    - add/enhancement: better Cisco ASA nodes support, with an ifdescr preformating
 #    - bugfix: remove single quote from perfdata names and url to pnp
 #    - bugfix: fixed major bug - config option -wp and -cp now honored (Birger Schmidt)
+#    - add/enhancement: negative value for err/disc pkt tracking disable the 
+#      specific tracking. Ex: --warning 50,0,-1 --critical 80,100,-1 disable discard
+#      packet tracking
 #
 #   ----------------------------------------------------------------------
 # * 0.03
